<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Wordbase Hacker</string>
    <string name="title_activity_game_list">Choose game</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_board">Game with <xliff:g>%s</xliff:g></string>

    <string name="cant_get_root">Couldn\'t get root.</string>
    <string name="cant_find_db">Couldn\'t find Wordbase data. Are you sure it\'s installed?</string>
    <string name="internal_error">An internal error occurred.</string>
    <string name="open_wordbase">Open Wordbase</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pending_opponent">(pending opponent)</string>
    <string name="unknown_opponent">(unknown player)</string>
    <string name="hack_game">Hack game</string>
    <string name="gained">Gained</string>
    <string name="killed">Killed</string>
    <string name="letters">Letters</string>
    <string name="mines">Mines</string>
    <string name="tiles">Tiles</string>
    <string name="progress">Progress</string>
    <string name="winning">Winning</string>
    <string name="losing">Losing</string>
    <string name="defaults">Defaults</string>
    <string name="scoring">Scoring</string>
    <string name="params">Options</string>
    <string name="play">Play</string>
    <string name="loading_board">Loading board</string>
    <string name="loading_moves">Loading moves</string>
    <string name="setting_params">Setting parameters</string>
    <string name="applying_moves">Applying moves</string>
    <string name="analyzing_words">Analyzing words</string>
    <string name="finding_words">Finding words</string>
    <string name="scoring_words">Scoring words</string>
    <string name="no_board_found">No board found. Try opening the game in Wordbase first.</string>
    <string name="no_moves">No moves found.</string>
    <string name="solver_busy">The native solver is busy. Please try again in a short while (or kill the application and try again).</string>
    <string name="best_move">Best word: <xliff:g>%1$s</xliff:g> (<xliff:g>%2$d</xliff:g>)</string>
    <string name="debug_version">%1$s (debug version)</string>
    <string name="bitbucket_url" translatable="false"><xliff:g>https://bitbucket.org/Pietu1998/wordbase-hacker</xliff:g></string>
    <string name="board_description">Game board</string>
    <string name="no_games">No games are waiting for your move.</string>
    <string name="allow_draw_on_top_title">Permission required</string>
    <string name="allow_draw_on_top">In order to assist you in playing the best word, Wordbase Hacker must be allowed to draw on top of Wordbase. Press OK to open settings or Cancel to disable the feature.</string>
    <string name="allow_draw_on_top_settings">In order to assist you in playing the best word, Wordbase Hacker must be allowed to draw on top of Wordbase. Press OK to open settings.</string>
    <string name="data_not_changed">The database has not changed. Open Wordbase to update it.</string>
    <string name="open">Open</string>
    <string name="play_hud_info">Press back to return and close HUD.</string>
    <string name="play_no_hud_info">Press back to return.</string>
    <string name="hud_edit_info">Press the tick to save, then press back to return.</string>
    <string name="dont_show_again">Don\'t show again</string>

    <!-- Preference keys -->
    <string name="pref_key_darktheme" translatable="false"><xliff:g>dark</xliff:g></string>
    <string name="pref_key_hud" translatable="false"><xliff:g>hud</xliff:g></string>
    <string name="pref_key_hudedit" translatable="false"><xliff:g>hudedit</xliff:g></string>
    <string name="pref_key_hudx" translatable="false"><xliff:g>hudx</xliff:g></string>
    <string name="pref_key_hudy" translatable="false"><xliff:g>hudy</xliff:g></string>
    <string name="pref_key_hudwidth" translatable="false"><xliff:g>hudwidth</xliff:g></string>
    <string name="pref_key_dbpath" translatable="false"><xliff:g>dbpath</xliff:g></string>
    <string name="pref_key_version" translatable="false"><xliff:g>version</xliff:g></string>
    <string name="pref_key_license" translatable="false"><xliff:g>license</xliff:g></string>
    <string name="pref_key_source" translatable="false"><xliff:g>source</xliff:g></string>
    <string name="pref_key_hide_play_info" translatable="false"><xliff:g>hide_play_info</xliff:g></string>
    <string name="pref_key_hide_edit_info" translatable="false"><xliff:g>hide_edit_info</xliff:g></string>
    <string name="pref_key_native" translatable="false"><xliff:g>native</xliff:g></string>
    <string name="pref_key_native_params" translatable="false"><xliff:g>native_params</xliff:g></string>
    <string name="pref_key_native_max_depth" translatable="false"><xliff:g>native_max_depth</xliff:g></string>
    <string name="pref_key_native_max_breadth" translatable="false"><xliff:g>native_max_breadth</xliff:g></string>
    <string name="pref_key_native_max_steps" translatable="false"><xliff:g>native_max_steps</xliff:g></string>
    <string name="pref_key_native_speedup_factor" translatable="false"><xliff:g>native_speedup_factor</xliff:g></string>

    <!-- Preference UI strings -->
    <string name="pref_category_solver">Solver</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_hud">HUD</string>
    <string name="pref_category_about">About</string>
    <string name="pref_native">Advanced solver</string>
    <string name="pref_desc_native_on">Using the more advanced native solver. Takes a lot longer to process, but finds better solutions.</string>
    <string name="pref_desc_native_off">Using the legacy Java solver. Fast, but uses a dumb algorithm.</string>
    <string name="pref_darktheme">Dark theme</string>
    <string name="pref_desc_darktheme">May require a restart.</string>
    <string name="pref_hud">Enable HUD</string>
    <string name="pref_desc_hud">Enables a HUD that displays the recommended word on top of the Wordbase app.</string>
    <string name="pref_hudedit">HUD position &amp;amp; size</string>
    <string name="pref_desc_hudedit">Tap to change HUD position and size.</string>
    <string name="pref_version">Version</string>
    <string name="pref_license">License</string>
    <string name="pref_desc_license"><xliff:g>Copyright &#169; Pietu1998 2015&#8211;2018</xliff:g>\nLicensed under the MIT license.</string>
    <string name="pref_source">Source code</string>
    <string name="pref_dev">Developer options</string>
    <string name="pref_dbpath">Custom database location</string>
    <string name="pref_desc_dbpath">Choose an alternate path for Wordbase\'s database.</string>
    <string name="pref_max_depth">Maximum depth</string>
    <string name="pref_desc_max_depth">The maximum number of future turns the solver considers. Quickly increases solving time.</string>
    <string name="pref_max_breadth">Maximum breadth</string>
    <string name="pref_desc_max_breadth">The maximum number of moves the solver considers for each turn. Quickly increases solving time.</string>
    <string name="pref_max_steps">Maximum steps</string>
    <string name="pref_desc_max_steps">The maximum number of moves the solver considers overall. Linearly limits solving time.</string>
    <string name="pref_speedup_factor">Turn multiplier</string>
    <string name="pref_desc_speedup_factor">Lower values prefer fast game progress. Does not largely affect solving speed.</string>
    <string name="pref_native_params">Advanced solver options</string>

</resources>