<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <Space
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:text="@string/gained"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
                android:textStyle="bold" />

            <TextView
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:text="@string/killed"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/letters"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView" />

            <EditText
                android:id="@+id/lettersBox"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberSigned" />

            <Space />
        </TableRow>

        <TableRow
            android:id="@+id/minesRow">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mines"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView" />

            <EditText
                android:id="@+id/minesBox"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberSigned" />

            <Space />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tiles"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView" />

            <EditText
                android:id="@+id/tilesPlrBox"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/tilesOppBox"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberSigned" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/progress"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView" />

            <EditText
                android:id="@+id/progressPlrBox"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/progressOppBox"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberSigned" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/winning"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView" />

            <EditText
                android:id="@+id/winBox"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="numberSigned" />
        </TableRow>

        <TableRow
            android:id="@+id/loseRow">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/losing"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView" />

            <EditText
                android:id="@+id/loseBox"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="numberSigned" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/defaults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaults" />

</LinearLayout>